[package]
name = "my_test_web_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["server", "http2"] }  
tokio = { version = "1", features = ["full"] }
reqwest = {version = "0.11", features = ["blocking"] }
log = "0.4.21"